# re-sharing

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py  views.py
docs/: Makefile  adr.rst  building_docs.rst  coding-conventions.md  conf.py  howto.rst  index.rst  make.bat  manager_authorization.md  user_guide.rst  users.rst
docs/ADR/: 0002-Develop-custom-software.md  0003-Batteries-Included-Framework.md  0008-Urls-and-Naming.md  0009-High-level-Apps-Architecture.md  0010-Bookings-App  0010-Bookings-App.md  0011-htmx.md  0012-service-layer.md  0013-auditlog.md  0014-Recurring-Bookings.md  0015-Dashboards-App.md  0016-Testing-Strategy.md  0017-Authentication-System.md  0018-Permission-Model-Architecture.md  0019-Frontend-Styling-Bootstrap5.md  0020-File-Storage-Strategy.md  0021-Providers-App.md  0022-Lendable-Items.md
docs/entity_relationship_diagram/: erd-v1.0.0.drawio  erd-v1.0.1-recurrence_draft.drawio  erd-v1.0.2-booking_group_message.drawio  erd-v1.1.0-remove_booking_group.drawio  erd-v1.1.1-reccurence_all-in-one.drawio
docs/modelling/: erd-v1.1.1-reccurence_all-in-one.drawio  erd-v1.1.2-reccurence_all-in-one.drawio  erd-v1.1.2-reccurence_in_seperate_model_logentry.drawio  erd-v1.1.3-user-organizations.drawio  erd-v1.1.4-organization_rights.drawio  erd-v1.1.5-simple_recurrence.drawio  erd-v1.1.6-pricing.drawio  erd-v1.2.0.drawio  erd-v1.2.1.drawio  erd-v1.3.0.drawio  erd-v1.4.0_organization_groups.drawio  erd-v1.4.1_user_groups.drawio  erd-v1.4.2_update.drawio  erd-v1.5.0_pricing-orgas.drawio  erd-v1.6.0_schedules.drawio  erd-v1.7.0_location.drawio
docs/pycharm/: configuration.rst
locale/de/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
openspec/: config.yaml
openspec/specs/organization-lifecycle/: spec.md
openspec/specs/organization-permanent-codes/: spec.md
re_sharing/: conftest.py
re_sharing/bookings/: admin.py  apps.py  forms.py  models.py  services.py  services_booking_series.py  services_item_bookings.py  services_recurrences.py  tasks.py  urls.py  views.py  views_item_bookings.py
re_sharing/bookings/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_booking_bookings_bo_resourc_496d8d_idx_and_more.py  0004_rename_recurrencerule_bookingseries.py  0005_alter_bookingseries_options_and_more.py  0005_alter_bookingseries_total_amount_per_booking.py  0005_recurrencerule.py  0006_alter_booking_end_date_alter_booking_end_time_and_more.py  0006_alter_recurrencerule_excepted_dates.py  0006_remove_booking_recurrence_rule_and_more.py  0007_alter_booking_compensation.py  0007_rename_total_amount_per_occurrence_bookingseries_total_amount_per_booking_and_more.py  0008_alter_bookingseries_compensation.py  0009_booking_compensation_booking_total_amount.py  0009_bookinggroup_and_more.py  0010_alter_booking_total_amount.py  0010_drop_django_q_tables.py  0011_booking_access_code.py  0011_booking_number_of_attendees.py  0012_alter_booking_access_code.py  0013_alter_bookingmessage_text.py  0013_booking_auto_generated_on_recurrencerule_status.py  0014_invoice_address_to_jsonfield.py  0015_recurrencerule_disable_reminder_emails.py  0026_booking_end_date_and_more.py  (+2 more)
re_sharing/dashboards/: apps.py  services.py  urls.py  views.py
re_sharing/organizations/: admin.py  apps.py  forms.py  mails.py  models.py  selectors.py  services.py  urls.py  views.py
re_sharing/providers/: admin.py  apps.py  decorators.py  models.py
re_sharing/resources/: admin.py  apps.py  forms.py  models.py  services.py  services_nuki.py  services_permanent_code.py  urls.py  views.py
re_sharing/rooms/: apps.py  services.py  urls.py  views.py
re_sharing/templates/: base.html  icons.html
re_sharing/users/: adapters.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
re_sharing/utils/: dicts.py  models.py
requirements/: base.txt  local.txt  production.txt
roomsharing/: conftest.py
roomsharing/bookings/: admin.py  forms.py  models.py  selectors.py  services.py  services_recurrences.py  tasks.py  urls.py  views.py
roomsharing/dashboards/: apps.py  services.py  urls.py  views.py
roomsharing/organizations/: admin.py  apps.py  forms.py  mails.py  models.py  selectors.py  services.py  tasks.py  urls.py  views.py
roomsharing/rooms/: admin.py  forms.py  models.py  services.py  urls.py  views.py
roomsharing/templates/: base.html  icons.html
roomsharing/users/: admin.py  forms.py  models.py  views.py
roomsharing/utils/: default_emails.py  dicts.py  models.py
utility/Docker/: Dockerfile  start
(+368 files in other folders)
