[project]
name = "re-sharing"
version = "0.1.0"
description = "Django resource sharing platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-slugify>=8.0.4",
    "Pillow>=10.4.0",
    "argon2-cffi>=23.1.0",
    "whitenoise>=6.7.0",
    "python-dateutil>=2.9.0.post0",
    "python-magic>=0.4.27",
    "icalendar>=6.0.1",
    "requests>=2.32.3",
    "django>=5.1.5",
    "django-environ>=0.12.0",
    "django-model-utils>=5.0.0",
    "django-allauth[mfa]>=65.8.1",
    "django-crispy-forms>=2.3",
    "crispy-bootstrap5>=2024.2",
    "django-extensions>=3.2.3",
    "django-auditlog>=3.0.0",
    "django-tinymce>=4.1.0",
    "django-storages[s3]>=1.14.4",
    "django-import-export>=4.3.4",
    "django-hijack>=3.7.1",
    "boto3>=1.35.54",
    "botocore>=1.35.54",
]

[project.optional-dependencies]
production = [
    "gunicorn>=23.0.0",
    "psycopg[c]>=3.2.4",
    "sentry-sdk>=2.20.0",
]
dev = [
    "Werkzeug[watchdog]>=3.0.4",
    "ipdb>=0.13.13",
    "psycopg[binary]>=3.2.4",
    "mypy>=1.11.2",
    "django-stubs[compatible-mypy]>=5.0.4",
    "pytest>=8.3.4",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=6.0.0",
    "Faker>=33.3.1",
    "freezegun>=1.5.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.1",
    "ruff>=0.9.2",
    "coverage>=7.6.10",
    "djlint>=1.36.4",
    "pre-commit>=4.1.0",
    "factory-boy>=3.3.1",
    "django-debug-toolbar>=5.0.1",
    "django-coverage-plugin>=3.1.0",
    "pytest-django>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["re_sharing/**"]
omit = ["*/migrations/*", "*/tests/*", "re_sharing/templates/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*.py",
    "staticfiles/*"
]
# Same as Django: https://github.com/cookiecutter/cookiecutter-django/issues/4792.
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF"
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "COM812",
  "ISC001"
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
